; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_swconfig.c_unregister_switch.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_swconfig.c_unregister_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.switch_dev = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unregister_switch(%struct.switch_dev* %0) #0 {
  %2 = alloca %struct.switch_dev*, align 8
  store %struct.switch_dev* %0, %struct.switch_dev** %2, align 8
  %3 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %4 = call i32 @swconfig_destroy_led_trigger(%struct.switch_dev* %3)
  %5 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %6 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @kfree(i32 %7)
  %9 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %10 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %9, i32 0, i32 0
  %11 = call i32 @mutex_lock(i32* %10)
  %12 = call i32 (...) @swconfig_lock()
  %13 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %14 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %13, i32 0, i32 1
  %15 = call i32 @list_del(i32* %14)
  %16 = call i32 (...) @swconfig_unlock()
  %17 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %18 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %17, i32 0, i32 0
  %19 = call i32 @mutex_unlock(i32* %18)
  ret void
}

declare dso_local i32 @swconfig_destroy_led_trigger(%struct.switch_dev*) #1

declare dso_local i32 @kfree(i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @swconfig_lock(...) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @swconfig_unlock(...) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
